--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -254,7 +254,7 @@
         "no-continue": "error",
         "no-inline-comments": "error",
         "no-lonely-if": "error",
-        "no-mixed-operators": "error",
+        "no-mixed-operators": "off",
         "no-mixed-spaces-and-tabs": "error",
         "no-multi-assign": "error",
         "no-multiple-empty-lines": [
