Very large commit for the god of large commits

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,6 +1,6 @@
 {
     "client": {
-        "server": "freenode.wikia.com",
+        "server": "freenode.fandom.com",
         "port": 9999,
         "nick": "MyKockaLogger",
         "realname": "The time has come.",
