Applied recommended community guidlines, msg.js does not handle new wikis, changed license

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "countervandalism",
         "logger"
     ],
-    "license": "CC-BY-SA-4.0",
+    "license": "GPLv3",
     "author": {
         "name": "KockaAdmiralac",
         "email": "1405223@gmail.com",
