npm audit; subst method only used once; hopefully fix issue with user group parsing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,9 @@
     "globals": {
         "main": false
     },
+    "parserOptions": {
+        "ecmaVersion": 2018
+    },
     "rules": {
         "for-direction": "warn",
         "getter-return": "error",
