--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kocka-logger",
-    "version": "1.1.7",
+    "version": "1.2.0",
     "description": "The time has come.",
     "keywords": [
         "wikia",
@@ -15,15 +15,18 @@
         "url": "https://github.com/KockaAdmiralac"
     },
     "contributors": [],
-    "main": "main.js",
+    "main": "index.js",
     "scripts": {
         "start": "node main.js"
     },
+    "bin": "./main.js",
     "repository": {
         "type": "git",
         "url": "https://github.com/KockaAdmiralac/KockaLogger.git"
     },
     "dependencies": {
+        "bluebird": ">=3.5.5",
+        "commander": ">=2.20.0",
         "irc-upd": ">=0.10.0",
         "mysql2": ">=1.6.5",
         "redis": ">=2.8.0",
@@ -31,6 +34,12 @@
         "request-promise-native": ">=1.0.7"
     },
     "devDependencies": {
-        "eslint": ">=6.0.1"
+        "eslint": ">=6.0.1",
+        "eslint-plugin-jsdoc": ">=15.4.0",
+        "eslint-plugin-node": ">=9.1.0",
+        "eslint-plugin-promise": ">=4.2.1"
+    },
+    "engines": {
+        "node": ">=11.15.0"
     }
 }
