--- a/redis.conf
+++ b/redis.conf
@@ -168,7 +168,7 @@ loglevel notice
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile "logs/redis.log"
+# logfile "DEFINED BY redis.sh"
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
@@ -260,7 +260,7 @@ dbfilename redis.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir ./cache
+# dir "DEFINED BY redis.sh"
 
 ################################# REPLICATION #################################
 
