--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kocka-logger",
-    "version": "1.1.8",
+    "version": "1.1.9",
     "description": "The time has come.",
     "keywords": [
         "wikia",
@@ -24,6 +24,7 @@
         "url": "https://github.com/KockaAdmiralac/KockaLogger.git"
     },
     "dependencies": {
+        "discord.js": ">=11.5.1",
         "irc-upd": ">=0.10.0",
         "mysql2": ">=1.6.5",
         "redis": ">=2.8.0",
