--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "license": "GPL-3.0-or-later",
     "author": {
         "name": "KockaAdmiralac",
-        "email": "1405223@gmail.com",
-        "url": "https://github.com/KockaAdmiralac"
+        "email": "git@kocka.tech",
+        "url": "https://kocka.tech"
     },
     "contributors": [],
     "main": "main.js",
@@ -24,14 +24,14 @@
         "url": "https://github.com/KockaAdmiralac/KockaLogger.git"
     },
     "dependencies": {
-        "discord.js": ">=11.5.1",
+        "discord.js": ">=12.0.2",
         "irc-upd": ">=0.10.0",
-        "mysql2": ">=1.6.5",
-        "redis": ">=2.8.0",
-        "request": ">=2.88.0",
-        "request-promise-native": ">=1.0.7"
+        "mysql2": ">=2.1.0",
+        "redis": ">=3.0.2",
+        "request": ">=2.88.2",
+        "request-promise-native": ">=1.0.8"
     },
     "devDependencies": {
-        "eslint": ">=6.0.1"
+        "eslint": ">=6.8.0"
     }
 }
