--- a/redis.conf
+++ b/redis.conf
@@ -1352,8 +1352,8 @@ rdb-save-incremental-fsync yes
 # defragmentation process. If you are not sure about what they mean it is
 # a good idea to leave the defaults untouched.
 
-# Enabled active defragmentation
-activedefrag yes
+# Disabled active defragmentation
+# activedefrag yes
 
 # Minimum amount of fragmentation waste to start active defrag
 active-defrag-ignore-bytes 100mb
