Client changes and bug fixes after finally testing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "rules": {
         "for-direction": "warn",
         "getter-return": "error",
-        "no-await-in-loop": "warn",
+        "no-await-in-loop": "off",
         "no-compare-neg-zero": "error",
         "no-cond-assign": "error",
         "no-console": "off",
@@ -26,7 +26,13 @@
         "no-empty-character-class": "error",
         "no-ex-assign": "error",
         "no-extra-boolean-cast": "error",
-        "no-extra-parens": "error",
+        "no-extra-parens": [
+            "error",
+            "all",
+            {
+                "enforceForArrowConditionals": false
+            }
+        ],
         "no-extra-semi": "error",
         "no-func-assign": "error",
         "no-inner-declarations": "error",
