--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "wikia",
         "fandom",
         "countervandalism",
-        "logger"
+        "logger",
+        "irc"
     ],
     "license": "GPL-3.0-or-later",
     "author": {
@@ -24,13 +25,16 @@
         "url": "https://github.com/KockaAdmiralac/KockaLogger.git"
     },
     "dependencies": {
-        "discord.js": ">=12.5.1",
-        "got": ">=11.8.2",
-        "ioredis": ">=4.24.2",
-        "irc-upd": ">=0.11.0",
-        "mysql2": ">=2.2.5"
+        "discord.js": "14.3.0",
+        "got": "11.x",
+        "ioredis": "5.2.3",
+        "irc-upd": "0.11.0",
+        "mysql2": "2.3.3"
     },
     "devDependencies": {
-        "eslint": ">=7.22.0"
+        "eslint": "8.23.0"
+    },
+    "engines": {
+        "node": "16.x"
     }
 }
