Allow TypeScript annotations in JSDoc. It was impractical to reference classes from other packages with standard JSDoc annotations.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -781,6 +781,7 @@
     },
     "settings": {
         "jsdoc": {
+            "mode": "typescript",
             "tagNamePreference": {
                 "virtual": "abstract",
                 "extends": "augments",
