--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
         "irc-upd": "0.11.0",
         "mysql2": "3.5.2"
     },
+    "optionalDependencies": {
+        "discord-interactions": "3.4.0",
+        "express": "4.18.2"
+    },
     "devDependencies": {
         "eslint": "8.45.0",
         "eslint-plugin-jsdoc": "46.4.4",
