--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     },
     "optionalDependencies": {
         "discord-interactions": "3.4.0",
-        "express": "4.18.2"
+        "express": "4.18.2",
+        "mwn": "1.11.5"
     },
     "devDependencies": {
         "eslint": "8.45.0",
